--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
     "requests>=2.32.5",
+    "pdfplumber>=0.11.0",
 ]
 
 [project.urls]
