--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ requires-python = ">=3.9"
 dependencies = [
     "requests>=2.32.5",
     "pdfplumber>=0.11.0",
+    "agno>=1.5.5",
+    "openai>=1.0.0",
 ]
 
 [project.urls]
