--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "pdfplumber>=0.11.0",
     "agno>=1.5.5",
     "openai>=1.0.0",
+    "python-dateutil>=2.8.0",
 ]
 
 [project.urls]
@@ -16,10 +17,11 @@ Repository = "https://github.com/gwbischof/epstein-search"
 
 [project.scripts]
 es = "cli:main"
+estl = "timeline:main"
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-include = ["client.py", "cli.py"]
+include = ["client.py", "cli.py", "timeline.py"]
